# epl-prediction

./: .gitignore  LICENSE  README.md  __init__.py  controller.py  pyproject.toml
.sass-cache/a554526818d3605f977c51fa9d42a701c8e309f0/: _vars.scssc  base.scssc  styles.scssc
datasets/: epl-2017-2018.csv
datasets/combined/: epl-no-labels.csv
models/: epl_engine.py  preprocess.py  process_data.py
models/trained/: AdaBoostClassifier.pkl
static/css/: base.css  base.css.map  styles.css
static/js/: base.js
static/scss/: _vars.scss  base.css  base.css.map  base.scss
templates/: index.html
templates/includes/: __layout.html
